BAEL-5391 - Java Error "Missing return statement"
- Add missing return statement examples

--- a/pom.xml
+++ b/pom.xml
@@ -932,6 +932,7 @@
                 <!-- <module>java-ee-8-security-api</module> --> <!-- long running -->
 
                 <module>javafx</module>
+                <module>java-errors</module>
                 <module>java-jdi</module>
                 <module>java-lite</module>
                 <module>java-numbers</module>
